// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select should render with a testID 1`] = `
<DocumentFragment>
  <span
    class="select_container"
  >
    <span
      class="active_option"
      data-test="active-option"
    >
      Name (A to Z)
    </span>
    <select
      class="product_sort_container"
      data-test="foo"
    >
      <option
        value="az"
      >
        Name (A to Z)
      </option>
      <option
        value="za"
      >
        Name (Z to A)
      </option>
      <option
        value="lohi"
      >
        Price (low to high)
      </option>
      <option
        value="hilo"
      >
        Price (high to low)
      </option>
    </select>
  </span>
</DocumentFragment>
`;

exports[`Select should render with default props 1`] = `
<DocumentFragment>
  <span
    class="select_container"
  >
    <span
      class="active_option"
      data-test="active-option"
    >
      Name (A to Z)
    </span>
    <select
      class="product_sort_container"
    >
      <option
        value="az"
      >
        Name (A to Z)
      </option>
      <option
        value="za"
      >
        Name (Z to A)
      </option>
      <option
        value="lohi"
      >
        Price (low to high)
      </option>
      <option
        value="hilo"
      >
        Price (high to low)
      </option>
    </select>
  </span>
</DocumentFragment>
`;
